--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 	<h1>Welcome to the Sample App</h1>
 
 	<h2>
-		This is the home page for the <a href="http:://railstutorial.org/">
+		This is the home page for the <a href="http://railstutorial.org/">
 			Ruby on Rails Tutorial</a> sample application.
 	</h2>
 
@@ -10,3 +10,4 @@
 </div>
 
 <%= link_to image_tag("rails.jpg", alt: "Rails"), 'http://rubyonrails.org/' %>
+
